@startuml
skinparam monochrome true
skinparam dpi 300
skinparam defaultFontSize 12

interface CommandLineInterface << ComplexCLI >> {
    __ Help page __
    cli
    __ Commands __
    importer
    exporter
}

namespace Commands {
    interface Exporter {
        __ Help page __
        cli exporter
        __ Commands __
        cmd-export-graphs-from-fuseki-server
        cmd-export-graphs-from-local-directory
    }

    interface Importer {
        __ Help page __
        cli importer
        __ Commands __
        cmd-build-hazop-graphs
        cmd-read-excel-data
        cmd-read-hazop-data
    }
}

namespace Services {
    class Exporter {
        + read_turtle_data()
        + parse_hazop_graph()
        + export_hazop_to_excel()
    }

    class Importer {
        + read_excel_data()
        + read_hazop_data()
        + build_hazop_graph()
    }

    class TripleStore {
        + get_dataset_information()
        + get_hazop_graph()
        + upload_hazop_graph()
    }
}

CommandLineInterface --> Commands.Exporter
CommandLineInterface --> Commands.Importer

Commands.Exporter --> Services.Exporter
Commands.Exporter --> Services.TripleStore

Commands.Importer --> Services.Importer
Commands.Importer --> Services.TripleStore
@enduml